# advent-of-code

./: .gitignore  day11.py  day13.py  day14.py  day15.py  day16.py  day17.py  day19-part2.cpp  day2.exs  day21.cpp  day3.py  day4.py  day5.py  day7.py  day9.py  download-input.sh  pyproject.toml
2018/: day1.exs  day12.py  day14.py  day15.py  day16.py  day17.py  day18.cpp  day19-thoughts.txt  day19.py  day21-thoughts.txt  day4.py  day6.py  day8.py
2019/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day19.py  day2.py  day21.py  day22.py  day23.py  day24.py  day25.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py  day9.py  intcode.py
2020/: day1.py  day10.py  day11.py  day12.py  day13.py  day14.py  day2.py  day3.py  day4.py  day5.py  day6.awk  day7.py  day8.py  day9.py  machine.py
2022/: day1.py  day2.py  day3.py  day4.py  day5.py  day6.py  day7.py  day8.py
2023/: day1.v
2024/: day1.go  day2.go  day2_test.go
day9/: day10.py
day9/lib/: day9.ex
day9/test/: day9_test.exs
