[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Kevin Tindall <kevinkjt2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
parsec = "^3.5"
tqdm = "^4.54.1"
numpy = "^1.23.5"
more-itertools = "^9.0.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
